# NumFuzz

./: .gitignore  Dockerfile  Makefile  README.md  bean.opam  dune-workspace  nfuzz.opam  out_table.sh  syntax.txt
.github/: dependabot.yml  workflows
.github/workflows/: workflow.yml
artifact/: README.md
artifact/NumFuzz/: .example.ml.swp  .gitignore  Dockerfile  Makefile  README.md  nfuzz.opam  tests.txt
artifact/NumFuzz/doc/: syntax.txt
artifact/NumFuzz/examples/FPTaylor/: Horner2_with_er.txt  Horner5.txt  Makefile  sqrt_add.txt  x_by_xy.txt
artifact/NumFuzz/examples/FPTaylor/tmp/: bb  bb_1.ml  bb_2.ml
artifact/NumFuzz/examples/Gappa/: Horner2_with_er.g  Makefile  gappa_tests.txt  one_by_sqrtxx.g  typescript
artifact/NumFuzz/examples/NumFuzz/: Horner2.fz  Horner2_HO.fz  Makefile  hypot.fz  numfuzz_tests.txt
artifact/NumFuzz/src/: dune  lexer.mll
doc/: README.md  syntax.txt
examples/: 2x2LinearSolver.be  3x3LinearSolver.be  BadPolyVal3.be  Cholesky.fz  Cos.be  Determinant.fz  Doolittle.be  GMatVecMul.be  GVecAdd.fz  Horner1.fz  Horner2.be  Horner2.fz  Horner3.be  InnerProduct.fz  LinearSolver.fz  MatVecMul.be  MatrixMatrix.be  PolyVal3.be  ScaleVec.be  Sine.be  Sum3.be  test.be  test.fz
examples/FPTaylor/: Horner2.txt  Horner2_with_er.txt  Horner5.txt  Makefile  README.txt  config.cfg  i4.txt  nonlin1.txt  verhulst.txt  (+6 more)
nfuzz/: Dockerfile  README.md  a.out  example.ml  nfuzz.opam
nfuzz/examples/FPTaylor/: Horner20.txt  Makefile  README.txt  cart_to_polar.txt  config.cfg  hypot.txt  nonlin1.txt  sqrt_add.txt  x_by_xy.txt
nfuzz/examples/FPTaylor/tmp/: bb  bb_1.ml  bb_2.ml  bb_3.ml
nfuzz/examples/Gappa/: Horner5.g  Makefile  cart_to_polar.g  hypot.g  test02_sum8.g  x_by_xy.g
nfuzz/examples/dfuzz/: Horner2.fz  Horner2_er.fz  Horner2_with_er.fz  add_mul_test.fz  cart_to_polar.fz  easy.fz  easy2.fz  easy3.fz  hypot.fz  nfuzz_test.fz  nlibrary.fz  nonlin1.fz  pow4.fz  sqrt_add.fz  t_div_t1.fz
nfuzz/examples/nfuzz/: .nlibrary_test.fz.swp  Horner100.fz  Horner2.fz  Horner20.fz  Horner2_HO.fz  Horner2_proper.fz  Horner2_with_er.fz  Horner5.fz  Horner5_HO.fz  Makefile  add_mul_test.fz  cart_to_polar.fz  conditional1.fz  hypot.fz  nlibrary.fz  nonlin1.fz  one_by_sqrtxx.fz  pow4.fz  sqrt_add.fz  test02_sum8.fz  test05_nonlin1.fz  tests.txt  x_by_xy.fz
nfuzz/lib/: primitives.fz
nfuzz/src/: backend.ml  constr.ml  dfuzz.ml  dune  lexer.mll  nfuzz.ml  parser.mly  print.ml  support.ml  syntax.ml  ty_bi.ml
src/: .du.swp  backend.ml  bean.ml  constr.ml  convert_ast.ml  ctx.ml  dune  lexer.mll  nfuzz.ml  option.ml  paired.ml  parser.mly  print.ml  support.ml  syntax.ml  translate.ml  translate_ast.ml  translate_inline.ml  translate_real.ml  ty_bi.ml  util.ml
(+250 files in other folders)
