synopsis: "A Type System for Numerical Error Analysis"
description: """ """
opam-version: "2.0.9"
license: "GNU GPL"

depends: [
  "ocaml"                { >= "4.14.1"   }
  "dune"                 { >= "2.1.3"    }
  "menhir"               { >= "20181113" }
  "alt-ergo"             {  = "2.3.0"    }
  "mlmpfr"               { >= "4.1.1"    }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
