synopsis: "A Type System for Numerical Error Analysis"
description: """ """
opam-version: "2.0.9"
license: "GNU GPL"

depends: [
  "ocaml"                { >= "4.14.1"   }
  "dune"                 { >= "3.14.0"    }
  "menhir"               { >= "20220210" }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
