(env
 (dev
  (flags
   (:standard -w +42 -ccopt -L/usr/local/lib))
  (c_flags
   (:standard -O2 -Wall -Wextra -g -L/usr/local/lib))
  (env-vars
   (LD_LIBRARY_PATH /usr/local/lib)))
 (release
  (flags
   (:standard -warn-error))
  (c_flags
   (:standard -O2 -Werror))))

(library
 (name nfuzz)
 (wrapped false)
 (modules :standard \ nfuzz)
 (libraries unix menhirLib))

(executable
 (public_name nfuzz)
 (modules nfuzz)
 (libraries nfuzz))

(ocamllex lexer)
(menhir
 (modules parser))
